<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="au.edu.holmesglen.maryan.threeinarow.Settings"
    tools:showIn="@layout/activity_settings"
    android:background="@android:color/holo_green_dark">


    <TextView
        android:id="@+id/settingsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/theme_color_label"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/radioGroupGrids"
        android:layout_marginTop="51dp"
        android:layout_below="@+id/radioGroupColors"
        android:layout_alignLeft="@+id/radioGroupColors"
        android:layout_alignStart="@+id/radioGroupColors">

        <RadioButton
            android:id="@+id/gridFourByFour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/four_by_four"
            android:textColor="@android:color/white"/>

        <RadioButton
            android:id="@+id/gridFiveByFive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/five_by_five"
            android:textColor="@android:color/white"/>
    </RadioGroup>


    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/radioGroupColors"
        android:layout_marginLeft="31dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="23dp"
        android:layout_below="@+id/settingsTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

            <RadioButton
                android:id="@+id/radio_option1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:drawableRight="@drawable/option1"/>

            <RadioButton
                android:id="@+id/radio_option2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:drawableRight="@drawable/option2"/>
    </RadioGroup>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/radioDifficultyLevel"
        android:layout_marginTop="29dp"
        android:layout_below="@+id/radioGroupGrids"
        android:layout_alignLeft="@+id/radioGroupGrids"
        android:layout_alignStart="@+id/radioGroupGrids">
    <RadioButton
        android:id="@+id/radEasy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:text="@string/easy_level"
        android:textColor="@android:color/white"/>

    <RadioButton
        android:id="@+id/radDificult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:text="@string/difficult"
        android:textColor="@android:color/white"/>
</RadioGroup>

    <Button
        android:id="@+id/apply_changes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apply_changes"
        android:layout_below="@+id/radioDifficultyLevel"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"/>

</RelativeLayout>
