<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_help_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="au.edu.holmesglen.maryan.threeinarow.HelpMenu"
    tools:showIn="@layout/activity_help_menu">


    <TextView
        android:id="@+id/instruccion1Txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instruccion1"
        android:layout_alignBottom="@+id/instruccion1Img"
        android:layout_toRightOf="@+id/instruccion1Img"
        android:layout_toEndOf="@+id/instruccion1Img"
        android:layout_marginLeft="27dp"
        android:layout_marginStart="27dp"/>

    <TextView
        android:id="@+id/helpTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help_screen_title"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/threeinarowlogosmall"
        android:id="@+id/logoSmall"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/instruccion1"
        android:id="@+id/instruccion1Img"
        android:layout_marginTop="14dp"
        android:layout_below="@+id/logoSmall"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/instruccion2"
        android:id="@+id/instruccion2Img"
        android:layout_marginTop="14dp"
        android:layout_below="@+id/instruccion1Img"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:id="@+id/instruccion2Txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instruccion2"
        android:layout_marginTop="36dp"
        android:layout_alignTop="@+id/instruccion2Img"
        android:layout_alignLeft="@+id/instruccion1Txt"
        android:layout_alignStart="@+id/instruccion1Txt"/>


</RelativeLayout>
